Add pinia and userData store

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
     "myProfile": "My Profile",
-    "createListing": "Create Listing"
+    "createListing": "Create Listing",
+    "hello": "Hello"
 }
