--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,4 +1,5 @@
 {
     "myProfile": "Мій профіль",
-    "createListing": "Додати оголошення"
+    "createListing": "Додати оголошення",
+    "hello": "Привіт"
 }
