28-09-2025: created footer, T&C page and content page template

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,6 +2,7 @@
     "myProfile": "My Profile",
     "createListing": "Create Listing",
     "hello": "Hello",
+    "termsAndConditions": "Terms and сonditions",
     "businessBannerTitle": "Have business?",
     "businessBannerText": "Click here to see the details",
     "details": "Details"
