Add SocialsBlock.vue, BusinessBanner.vue, other updates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,9 @@
 {
     "myProfile": "My Profile",
     "createListing": "Create Listing",
-    "hello": "Hello"
+    "hello": "Hello",
+    "businessBannerTitle": "Have business?",
+    "businessBannerText": "Click here to see the details",
+    "details": "Details"
+
 }
