--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,8 @@
     "hello": "Hello",
     "businessBannerTitle": "Have business?",
     "businessBannerText": "Click here to see the details",
-    "details": "Details"
+    "details": "Details",
+    "sections": "Sections",
+    "popularRequests": "Popular requests"
 
 }
