--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -4,5 +4,7 @@
     "hello": "Привіт",
     "businessBannerTitle": "Маєш бізнес?",
     "businessBannerText": "Переглянь актуальні пропозиції для бізнесу",
-    "details": "Деталі"
+    "details": "Деталі",
+    "sections": "Розділи",
+    "popularRequests": "Популярні запити"
 }
