--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -7,5 +7,7 @@
     "businessBannerText": "Переглянь актуальні пропозиції для бізнесу",
     "details": "Деталі",
     "sections": "Розділи",
-    "popularRequests": "Популярні запити"
+    "popularRequests": "Популярні запити",
+    "categories": "Категорії",
+    "showAllinCategory": "Переглянути всі в категорії"
 }
